# NABLA-SciML

./: Burgers_Demo.ipynb  README.md  pyproject.toml
Crunch/Auxiliary/: utils.py
Crunch/Crunch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Crunch/Models/: layers.py
Crunch_PIML/: LICENSE  README.md  pyproject.toml
Crunch_PIML/Crunch/Auxiliary/: utils.py
Crunch_PIML/Crunch/Models/: layers_old.py  polynomials.py
KKANs/: README.md
KKANs/PIML/: KKAN_ssRBA-R.ipynb
RBA/: README.md
vRBA/Allen_Cahn/: PINNs_clean.ipynb
vRBA/Burgers/: SS_vRBA.ipynb
vRBA_variational_residual_based_attention_PINNs_Operator_learning/: CITATION.cff  README.md
vRBA_variational_residual_based_attention_PINNs_Operator_learning/Operator_Learning/: plots.ipynb
